--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "core-js": "^3.30.2",
     "googlemaps": "^1.12.0",
     "mapbox-gl": "^3.5.2",
+    "register-service-worker": "^1.7.2",
     "three": "^0.166.1",
     "vue": "^3.3.4",
+    "vue-router": "^4.4.0",
+    "vuex": "^4.1.0",
     "webxr-polyfill": "^2.0.3"
   },
   "devDependencies": {
